plugins {
    id 'org.springframework.boot' version '2.1.6.RELEASE'
    id 'java'
}
apply plugin: 'jacoco'

apply plugin: 'io.spring.dependency-management'

group 'squote'
version = '2.0.0'
sourceCompatibility = 10
targetCompatibility = 10

bootJar {
    archiveName = 'web-parser-rest.jar'
}

jacoco {
    toolVersion = "0.8.4"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.9.2'
    implementation group: 'org.asynchttpclient', name: 'async-http-client', version: '2.6.0'
    implementation 'com.github.ben-manes.caffeine:caffeine:2.7.0'
    implementation group: 'io.projectreactor.addons', name: 'reactor-extra', version: '3.2.3.RELEASE'

    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
    implementation group: 'com.google.guava', name: 'guava', version: '19.0'

    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation group: 'org.springframework', name: 'springloaded', version: '1.2.6.RELEASE'
}

test {
    testLogging.showStandardStreams = true
    
    systemProperty "tvboxnow.username", System.getenv("tvboxnow_username")
    systemProperty "tvboxnow.password", System.getenv("tvboxnow_password")
    systemProperty "discuss.username", System.getenv("discuss_username")
    systemProperty "discuss.password", System.getenv("discuss_password")
    systemProperty "googleapi.key", System.getenv("googleapi_key")
    systemProperty "oxford.dictionary.appId", System.getenv("oxforddictionary_appId")
    systemProperty "oxford.dictionary.appKey", System.getenv("oxforddictionary_appKey")
}

jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled false
    }
}
